--- a/styles.css
+++ b/styles.css
@@ -165,3 +165,10 @@ body.modal-open *:not(.disclaimer-overlay):not(.disclaimer-overlay *) {
   /* border: 1px solid red; */
   width: 100%;
 }
+input[type="radio"] {
+  width: 16px;
+  height: 16px;
+  min-width: 16px;
+  min-height: 16px;
+  margin-right: 8px;
+}
