--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 html,
 body {
   overflow-x: auto; /* Επιτρέπει την οριζόντια κύλιση αν το περιεχόμενο ξεπερνάει το πλάτος της οθόνης */
-  overflow-y: auto; 
   width: 100vw; /* Βεβαιώνεται ότι το πλάτος είναι 100% του viewport */
 }
 
@@ -62,6 +61,8 @@ body {
   /* Μέγιστο πλάτος του tooltip */
   width: 400px;
   max-width: 400px;
+
+  white-space: none; /* Επιτρέπεται το wrapping σε νέες γραμμές, χωρίς σπάσιμο λέξεων */
   word-break: normal; /* Δεν διασπόνται οι λέξεις */
   overflow-wrap: normal; /* Μη αναγκαστικό σπάσιμο λέξεων */
   background-color: #333;
@@ -83,7 +84,6 @@ body {
   font-size: 16px;
   line-height: 1.3;
 }
-
 /* Εμφάνιση του tooltip όταν ο χρήστης κάνει hover */
 .explanation-tooltip:hover .explanation-tooltiptext {
   visibility: visible;
