--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 html,
 body {
-  overflow-x: auto; /* Επιτρέπει την οριζόντια κύλιση αν το περιεχόμενο ξεπερνάει το πλάτος της οθόνης */
-  width: 100vw; /* Βεβαιώνεται ότι το πλάτος είναι 100% του viewport */
+  overflow-x: hidden;
 }
 
 /* header */
