--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 html,
 body {
-  overflow-x: auto;
+  overflow-x: auto; /* Επιτρέπει οριζόντια κύλιση αν το περιεχόμενο είναι μεγαλύτερο */
+  width: 100vw; /* Βεβαιώνει ότι το πλάτος είναι σωστό */
+  max-width: 100%; /* Αποτρέπει περιττή συρρίκνωση */
 }
 
 /* header */
