--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 html,
+<meta name="viewport" content="width=device-width, initial-scale=1">
 body {
   overflow-x: auto; /* Επιτρέπει οριζόντια κύλιση αν το περιεχόμενο είναι μεγαλύτερο */
   width: 100vw; /* Βεβαιώνει ότι το πλάτος είναι σωστό */
