--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,6 @@
 html,
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Η Σελίδα Μου</title>
-    <link rel="stylesheet" href="styles.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
 body {
-  overflow-x: auto; /* Επιτρέπει οριζόντια κύλιση αν το περιεχόμενο είναι μεγαλύτερο */
-  width: 100vw; /* Βεβαιώνει ότι το πλάτος είναι σωστό */
-  max-width: 100%; /* Αποτρέπει περιττή συρρίκνωση */
+  overflow-x: hidden;
 }
 
 /* header */
@@ -66,11 +55,20 @@ body {
   color: green !important;
 }
 
+
+
+
+
+
 .explanation-tooltip .explanation-tooltiptext {
   visibility: hidden;
   /* Μέγιστο πλάτος του tooltip */
   width: 400px;
-  max-width: 400px;
+  
+    max-width: 600px;
+    overflow-y: auto;
+
+    
   white-space: none; /* Επιτρέπεται το wrapping σε νέες γραμμές, χωρίς σπάσιμο λέξεων */
   word-break: normal; /* Δεν διασπόνται οι λέξεις */
   overflow-wrap: normal; /* Μη αναγκαστικό σπάσιμο λέξεων */
@@ -93,6 +91,7 @@ body {
   font-size: 16px;
   line-height: 1.3;
 }
+
 /* Εμφάνιση του tooltip όταν ο χρήστης κάνει hover */
 .explanation-tooltip:hover .explanation-tooltiptext {
   visibility: visible;
