--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body {
   width: 400px;
   
     max-width: 600px;
-    overflow-y: auto;
+    overflow-x: auto;
 
     
   white-space: none; /* Επιτρέπεται το wrapping σε νέες γραμμές, χωρίς σπάσιμο λέξεων */
