--- a/styles.css
+++ b/styles.css
@@ -66,10 +66,10 @@ body {
      
     width: fit-content;
     max-width: 600px;
-    overflow-x: auto;
+    overflow-x: visible;
 
     
-  white-space: normal; /* Επιτρέπεται το wrapping σε νέες γραμμές, χωρίς σπάσιμο λέξεων */
+  white-space: none; /* Επιτρέπεται το wrapping σε νέες γραμμές, χωρίς σπάσιμο λέξεων */
   word-break: normal; /* Δεν διασπόνται οι λέξεις */
   overflow-wrap: normal; /* Μη αναγκαστικό σπάσιμο λέξεων */
   background-color: #333;
