--- a/styles.css
+++ b/styles.css
@@ -55,16 +55,11 @@ body {
   color: green !important;
 }
 
-
-
-
-
-
 .explanation-tooltip .explanation-tooltiptext {
   visibility: hidden;
   /* Μέγιστο πλάτος του tooltip */
      
-    width: fit-content;
+    width: 400px;
     max-width: 800px;
     overflow-x: visible;
 
