--- a/styles.css
+++ b/styles.css
@@ -77,9 +77,14 @@ body {
   position: absolute;
   z-index: 1;
   right: 105%; /* Τοποθέτηση δεξιά του trigger */
+  
+  
+  left: 50%; /* Τοποθέτηση στο κέντρο */
+  
+  
+  
   top: 200%; /* Κάθετα στο μέσο του trigger */
   transform: translateY(-50%);
-
   opacity: 0;
   transition: opacity 0.3s;
 
