--- a/styles.css
+++ b/styles.css
@@ -78,8 +78,8 @@ body {
   bottom:0;
   z-index: 1;
   right: 105%; /* Τοποθέτηση δεξιά του trigger */
-  top: 200%; /* Κάθετα στο μέσο του trigger */
-  transform: translateY(-50%);
+  top: 100%; /* Κάθετα στο μέσο του trigger */
+  transform: translateY((10px));
   opacity: 0;
   transition: opacity 0.3s;
 
