--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ body {
 .govgr-arrow-left {
   width: 20px;  /* Μεγαλύτερο μέγεθος για καλύτερη ορατότητα */
   height: 20px;
-  fill: black; /* Άλλαξέ το αν χρειάζεται */
+  fill: black; 
 }
 #backQuestion {
   border-radius: 5px;
