--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,8 @@ body {
 
 /* Στυλ στοιχείου του tooltip */
 .explanation-tooltip {
-  position: relative;
+  position: sticky;
+  bottom:0;
   display: inline-block;
   cursor: help;
   color: green !important;
@@ -74,7 +75,8 @@ body {
   border-radius: 5px;
 
   /* Τοποθέτηση πάνω από το στοιχείο */
-  position: absolute;
+  position: sticky;
+  bottom:0;
   z-index: 1;
   right: 105%; /* Τοποθέτηση δεξιά του trigger */
   top: 200%; /* Κάθετα στο μέσο του trigger */
@@ -95,7 +97,8 @@ body {
 /* Προαιρετικό "βέλος" για το tooltip */
 .explanation-tooltip .explanation-tooltiptext::after {
   content: "";
-  position: absolute;
+  position: sticky;
+  bottom:0;
   top: 50%;
   right: 100%; /* Το βέλος θα εμφανίζεται στα αριστερά του tooltip */
   transform: translateY(-50%);
