--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
 
 /* Στυλ στοιχείου του tooltip */
 .explanation-tooltip {
-  position: sticky;
+  position: relative;
   bottom:0;
   display: inline-block;
   cursor: help;
