--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ body {
   visibility: hidden;
   /* Μέγιστο πλάτος του tooltip */
      -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
     width: 50vw;
     max-width: 800px;
     //overflow-x: visible;
