--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ body {
   text-align: center; 
   padding: 5px;
   border-radius: 5px;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Times New Roman', sans-serif;
   /* Τοποθέτηση πάνω από το στοιχείο */
   position: sticky;
   bottom:0;
@@ -84,7 +84,7 @@ body {
   opacity: 0;
   transition: opacity 0.3s;
 
-  font-size: 15px;
+  font-size: 18px;
   line-height: 1.3;
 }
 
